<resources>

    <string name="app_name">Hat Game</string>
    <string name="play">Next</string>
    <string name="rules">Rules</string>


    <string name="Teem">Teams</string>
    <string name="WordsIn">Player</string>

    <string name="player_actyvity">Players</string>
    <string name="start_actyvity">The Hat Game</string>
    <string name="teem_actyvity">Teams</string>
    <string name="state_actyvity">Game settings</string>
    <string name="word_actyvity">Words input</string>
    <string name="team_rename">Team name</string>
    <string name="player_rename">Rename player</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="penalty_include">Penalty for skipped words</string>
    <string name="penalty_point">Penalty points</string>
    <string name="player_game">Explains player:</string>
    <string name="game_winner">The winner is</string>
    <string name="game_resalt">Game results</string>
    <string name="new_game">New game</string>
    <string name="resum">RESUME</string>

    <string name="add_team">Add a team</string>
    <string name="remove_team">Remove a team</string>
    <string name="two_team_min">2 teams is a minimum</string>


    <string name="go">Go</string>
    <string name="name_not_unic">Player already exists</string>
    <string name="player_name_empty">Player name shoud not be empty</string>
    <string name="not_enough_players">Add more players</string>
    <string name="loadGame">Load game</string>
    <string name="no_answers">No one words were answered</string>

    <string name="add_random">Add random</string>

    <string name="cant_create_teams">Minimum two player per team</string>

    <string name="words_input_left">Words left %1d</string>
    <string name="who_inputs">%1s inputs words</string>

    <!-- Rate -->
    <string name="rate">Rate us</string>
    <string name="rate_massage">Rate this game if you like it</string>
    <string name="rate_never">Never</string>
    <string name="rate_last">Later</string>
    <string name="rate_ok">Rate</string>


    <!-- Toasts -->
    <string name="press_more_to_finish_game">Press again to finish a game</string>

    <!-- Settings -->
    <string name="timeN">Time for turn</string>
    <string name="wordN">Words per player</string>
    <string name="vvodi">Write a word</string>
    <string name="dificult">Complexity of added words</string>
    <string name="allow_random">Allow random words</string>
    <string name="name">Name</string>
    <string name="add_player">add player</string>
    <string name="add_all_word_random">Add all word random</string>


    <string name="shuffle_teams">Shuffle teams</string>
    <string name="words_answered">Answered: </string>

    <!-- RoundRules -->

    <string name="round_first">
        You need to explain as many words as you can for your team in a given time.
       Explain it in sentences which don\'t contain a given word. You can\'t use words with similar
        pronunciation or foreign words with the same meaning. Don\'t use gestures.
        The game goes on till no one word in the hat</string>

    <string name="round_first_name">Word by sentences</string>
    <string name="round_two">
    Explain a given word by gestures. Keep the silence. You can\'t use other things or point to objects</string>
    <string name="round_two_name">Word by gestures</string>
    <string name="round_three">You need to use only one word associated
    with the given one, for an explanation. No more gestures, no more sounds, only one word.</string>
    <string name="round_three_name">One word</string>
    <string name="round_first_number">First round</string>
    <string name="round_two_number">Second round</string>
    <string name="round_three_number">Third round</string>
    <string name="round_end">Round results</string>

    <!-- Words difficulty -->
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very hard</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>

    <!-- Preferences -->
    <string name="enable_sound_title">Enable sound</string>
    <string name="enable_sound_pref_key" translatable="false">enable_sound_key</string>
    <string name="theme_title">Theme</string>
    <string name="theme_pref_key" translatable="false">theme_pref_key</string>

    <string name="theme_teal">Teal</string>
    <string name="theme_green">Green</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_cyan">Cyan</string>
    <string name="opensource_title">Opensourse libraries used in this project</string>
    <string name="used_content">Images and sounds used in project</string>
    <string name="privasy_policy">Privacy policy</string>
    <string name="delete_players">Delete saved Player</string>
    <string name="not_saved_players">You don\'t have saved Player</string>

    <string name="no_saved_games">No games saved yet..</string>

    <!-- fatal error activity -->
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for that.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="skip">Skip</string>
    <string name="answer">Answer</string>

    <!-- hint-->
    <string name="hint_inject_name">Write player name</string>
    <string name="hint_inject_name_button">Click a button to add her to the game. You need at least 4 players for the game</string>
    <string name="hint_random_player">Random</string>
    <string name="hint_inject_random_player">Click this button and add a player with a random name</string>
    <string name="hint_team_shaffle">Create teams</string>
    <string name="hint_team_shaffle_button">Click a button to add, remove or shuffle teams </string>
    <string name="click_to_rename">Click to rename a team</string>
    <string name="rename">Rename</string>
    <string name="hint_select_avatar">Select Avatar</string>
    <string name="hint_select_avatar_description">Tap to change image</string>

    <!-- no winner-->
    <string name="no_winner">The winner is not defined</string>
    <string name="no_winner_draw">Draw</string>
    <string name="turn_player">Now it\'s turn of:</string>
    <string name="finish">finish game</string>
    <string name="share">Share</string>
    <string name="invite_friend">Share the Hat Game with your friends</string>

    <!-- leaveDialog-->
    <string name="leaveTitle">Leave Game</string>
    <string name="leaveMessage">Save the game before exiting?</string>

    <!-- RepeatGame-->
    <string name="repeatTitle">Game completed</string>
    <string name="repaetMessage">Do you want to play again with the same settings?</string>
    <string name="repeatNegative">No</string>
    <string name="repeatPositive">Yes</string>


    <string name="add_user_avatar">Add yours picture</string>

    <string name="add_user_player">Saved players</string>
    <string name="add_random_player">Random player</string>
    <string name="teams_need_at_least_two">A team must have at least two players</string>
    <string name="team_reorder">Team reordering</string>
    <string name="team_reorder_guide">Long click and drag player to move it to another team</string>
    <string name="choose_photo">Choose photo</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="data_usage_consent_change" translatable="false">Change or revoke a data usage consent</string>
    <string name="write_word">some word</string>
    <string name="premium_offer" translatable="false">Would you like to pay 10$ for ad free version?</string>
    <string name="yes">Yes</string>
    <string name="we_dont_have_premium" translatable="false">Sorry, currently  we don\'t have a paid version. But we have to provide an ad free option, so we just remove all ads for you since now</string>
    <string name="no">no</string>
    <string name="penalty_hint">If the player does not want to explain the word and skips it, her team will be fined.</string>
    <string name="all_random_hint">Players do not need to make up words. The hat will be filled randomly.</string>
    <string name="allow_random_hint">The player will be able to add random words.</string>


</resources>
