<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.sergey.shlypa2.ui.fragments.WelcomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/text_Big"
        android:textColor="@color/colorPrimaryDark"/>
    <Button

        style="@style/Button_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btLoadGame"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/new_game"
        android:id="@+id/btNewGame"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <Button

        style="@style/Button_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintTop_toBottomOf="@id/btNewGame"
        app:layout_constraintBottom_toTopOf="@id/btRules"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/loadGame"
        android:id="@+id/btLoadGame"
        />

    <Button
        style="@style/Button_welcome"
        android:id="@+id/btRules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintTop_toBottomOf="@+id/btLoadGame"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/text_smoll"
        android:text="@string/rules"/>


</android.support.constraint.ConstraintLayout>