<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergey.shlypa2.screens.premium.BuyPremiumActivity">

    <Button
        android:id="@+id/btBuy"
        style="@style/Button_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:text="@string/yes"
        app:layout_constraintBottom_toTopOf="@id/btCancelBuy"
        app:layout_constraintTop_toBottomOf="@id/tvPremium" />

    <Button
        android:id="@+id/btCancelBuy"
        style="@style/Button_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btBuy" />

    <TextView
        android:id="@+id/tvPremium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:gravity="center"
        android:text="@string/premium_offer"
        android:textSize="@dimen/text_big"
        app:layout_constraintBottom_toTopOf="@id/btBuy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>
