<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/rate"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_massage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:text="@string/rate_massage"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <LinearLayout
        android:id="@+id/ll_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_massage">

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_grey" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_grey" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_grey" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_grey" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_grey" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:text="@string/rate_never"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/ll_stars" />

    <Button
        android:id="@+id/bt_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:text="@string/rate_ok"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_stars"

        />

    <Button
        android:id="@+id/bt_neutral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:text="@string/rate_last"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toLeftOf="@+id/bt_positive"
        app:layout_constraintTop_toBottomOf="@+id/ll_stars"

        />

</androidx.constraintlayout.widget.ConstraintLayout>