<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sergey.shlypa2.ui.settings.SettingsFragment">

    <com.example.sergey.shlypa2.views.SwitchSetting
        android:id="@+id/ssPrefSound"
        app:switch_setting_title="@string/enable_sound_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/settings_margin"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvThemeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/theme_title"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_settings"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinnerDificult"
        app:layout_constraintTop_toBottomOf="@+id/view"
        />

    <Spinner
        android:id="@+id/spinnerThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="@+id/tvThemeTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvThemeTitle" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/settings_margin"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvThemeTitle, spinnerThemes, view2"/>

    <TextView
        android:id="@+id/tvOpenSource"
        android:text="@string/opensource_title"
        android:layout_marginLeft="20dp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintBottom_toTopOf="@id/view3"
        />

    <View
        android:id="@+id/viewOpensourseBack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintBottom_toTopOf="@id/view3"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/settings_margin"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <TextView
        android:id="@+id/tvContentLicense"
        android:text="@string/used_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintBottom_toTopOf="@id/view4"
        />

    <View
        android:id="@+id/viewContentBack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintBottom_toTopOf="@id/view4"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/settings_margin"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:text="@string/privasy_policy"
        android:layout_marginLeft="20dp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view4"
        app:layout_constraintBottom_toTopOf="@id/view5"
        />

    <View
        android:id="@+id/viewPrivacyBack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/view4"
        app:layout_constraintBottom_toTopOf="@id/view5"/>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/settings_margin"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>
