<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergey.shlypa2.ui.GameResultActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvGameWinner"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_medium"
        android:gravity="center"
        android:text="@string/game_winner"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvGameWinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_winner"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_huge"
        android:gravity="center"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civWinnerAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:civ_border_color="@color/LightGray"
        app:civ_border_width="2dp"
        app:layout_goneMarginTop="@dimen/medium_margin"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_winner"
        app:layout_constraintBottom_toTopOf="@+id/tv_game_resalt"
        app:layout_constraintVertical_bias="0.38"
        app:layout_constraintWidth_percent="0.50"
        android:src = "@drawable/trophy"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tv_game_resalt"
        android:gravity="center"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_big"
        android:text="@string/game_resalt"
        app:layout_constraintTop_toBottomOf="@+id/tv_winner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rvGameResults"

        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvGameResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btCreateNewGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_winner"
        android:layout_marginTop="@dimen/text_huge"/>

    <Button
        style="@style/btNextStyle"
        android:text="@string/new_game"
        android:id="@+id/btCreateNewGame"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
